# bdf

./: .gitignore  README.md  requirements.txt
notebooks/: dataset.ipynb  ui.ipynb
package/: LICENSE  pyproject.toml
package/src/bdf/: __main__.py  dataset.py  outliers.py  tools.py  visualization.py
package/src/bdf/ui/: __init__.py  component.py
package/src/bdf/ui/app/: __init__.py  application.py  models.py
package/src/bdf/ui/app/routes/: home.py
package/src/bdf/ui/components/: text.py
package/tests/: test_dataset.py  test_outliers.py  test_tools.py  test_visualization.py
